5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1716_2496.log
== TEST (2019-05-07 16:42:19) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:20) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:21) 
-- CODE:
num = int(input("Informe o numro")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numro")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:42:41) 
-- CODE:
num = int(input("Informe o numero")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:43:44) 
-- CODE:
num = int(input("Informe o numero: ")):

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: n")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 1
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:43:55) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: n")):
			
	print (soma)
	
	
		
-- ERROR:
File "XXXX", line 9
    num = int(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:44:00) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: n"))
			
	print (soma)
	
	
		
-- OUTPUT:
874
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:57:18) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	num = int(input("Informe outro numero: "))
	
	
		
-- EXECUTION TIME:
0.486331
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 13, in <module>
    num = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:58:01) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	num = int(input("Informe outro numero: "))
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:00:03) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	
		
-- EXECUTION TIME:
919.151
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:00:03) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	
		
-- EXECUTION TIME:
853.759
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:03:08) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	num = int(input("Informe outro numero: "))
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:04:34) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	num = int(input("Informe outro numero: "))
	
	
		
-- EXECUTION TIME:
0.235327
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 13, in <module>
    num = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:05:08) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	#num = int(input("Informe outro numero: "))
	
	
		
-- OUTPUT:
874
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:05:28) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	#num = int(input("Informe outro numero: "))
	
	
		
-- OUTPUT:
874
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:06:15) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num == -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	#num = int(input("Informe outro numero: "))
	
	
		
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:06:59) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num == -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	#num = int(input("Informe outro numero: "))
	
	
		
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:09:47) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
print (soma)
	
	#num = int(input("Informe outro numero: "))
	
	
		
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:09:57) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
print (soma)
	
num = int(input("Informe outro numero: "))
	
	
		
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:11:10) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
num = int(input("Informe outro numero: "))
	
	
		
-- OUTPUT:
874
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:11:40) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	num = int(input("Informe outro numero: "))
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:12:06) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	num = int(input("Informe outro numero: "))
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:12:36) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	num = int(input("Informe outra sequencia de numero: "))
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:13:01) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
num = int(input("Informe outra sequencia de numero: "))
	
	
		
-- OUTPUT:
874
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:14:40) 
-- CODE:
num = int(input("Informe o numero: "))

while (num == 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	num = int(input("Informe outra sequencia de numero: "))
	
	
		
-- OUTPUT:
874
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:15:15) 
-- CODE:
num = int(input("Informe o numero: "))

while (num == 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	num = int(input("Informe outra sequencia de numero: "))
	
	
		
-- EXECUTION TIME:
0.652621
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:16:25) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
print (soma)
	
num = int(input("Informe outro numero: "))
	
	
		
-- EXECUTION TIME:
356.118
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:16:26) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	#num = int(input("Informe outro numero: "))
	
	
		
-- EXECUTION TIME:
684.64
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:41:55) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	num = int(input("Informe outra sequencia de numero: "))
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 10:42:21) 
-- CODE:
num = int(input("Informe o numero: "))

while (num != 0):
	soma = 0
	
	while (num != -1):
		soma = soma + num
		num = int(input("Informe outro numero: "))
			
	print (soma)
	
	num = int(input("Informe outra sequencia de numero: "))
	
	
		
-- EXECUTION TIME:
0.154141
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 12, in <module>
    num = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 10:53:22) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite outro numero: "))

print (soma)


-- EXECUTION TIME:
0.139571
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 10:59:53) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite o proximo numero: "))

print (soma)


-- EXECUTION TIME:
0.174199
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:06:35) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	#numero = int(input("Digite o proximo numero: "))

print (soma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:07:04) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite o proximo numero: "))

print (soma)


-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:07:40) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite o proximo numero: "))

print (soma)


-- EXECUTION TIME:
0.317215
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:14:02) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	#numero = int(input("Digite o proximo numero: "))

print (soma)


-- EXECUTION TIME:
457.417
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:05:53) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite o proximo numero: "))

print (soma)


-- EXECUTION TIME:
0.196178
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:51:34) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite o proximo numero: "))

print (soma)


-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 22:51:39) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite o proximo numero: "))

print (soma)


-- EXECUTION TIME:
0.0251708
-- ERROR:
Error response from daemon: Container 58128a93d3c08a55f59fbbecca9f748de708b8ec9c1542e50b7b407f4b004987 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 22:51:43) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite o proximo numero: "))

print (soma)


-- EXECUTION TIME:
0.02788
-- ERROR:
Error response from daemon: Container 58128a93d3c08a55f59fbbecca9f748de708b8ec9c1542e50b7b407f4b004987 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 22:52:34) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite o proximo numero: "))

print (soma)


-- EXECUTION TIME:
0.030741
-- ERROR:
Error response from daemon: Container 58128a93d3c08a55f59fbbecca9f748de708b8ec9c1542e50b7b407f4b004987 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 22:56:49) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite o proximo numero: "))

print (soma)


-- EXECUTION TIME:
0.027571
-- ERROR:
Error response from daemon: Container 58128a93d3c08a55f59fbbecca9f748de708b8ec9c1542e50b7b407f4b004987 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:56:53) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite o proximo numero: "))

print (soma)


-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 12:39:53) 
-- CODE:
numero = int(input("Informe um numero: "))

soma = 0

while (numero != -1):
	soma = soma + numero
	
	numero = int(input("Digite o proximo numero: "))

print (soma)


-- EXECUTION TIME:
0.178392
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
